Need to optimize akka streams